--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.117.1",
+    "fastapi[standard]>=0.117.1",
     "py2many>=0.7",
     "pydantic>=2.11.9",
 ]
